# maxbot

./: .env.example  .gitignore  ECC_LEARNING_PLAN.md  EVOLUTION_PROGRESS.md  EXECUTION_GUIDE.md  MAXBOT_EVOLUTION_PLAN.md  PHASE1_COMPLETED.md  PHASE1_SUMMARY.md  PLAN.md  PLAN_SUMMARY.md  README.md  installation_research_report.json  pyproject.toml  security_audit_report.md  test_phase3_learning_system.py  test_phase3_observer_config.py  test_skills_agents.py
docs/: HARNESS_OPTIMIZATION.md  HARNESS_OPTIMIZATION_PRACTICE.md  UPGRADE_SUMMARY.md  _call_tool_integration.md  _call_tool_modification.md  agent_loop_integration_guide.md  agent_loop_integration_patch.md  agent_loop_integration_patch_complete.md  agent_loop_optimization_plan.md  agent_loop_optimization_summary.md  bug_fixes_efficiency.md  claude_code_optimizations.md  claude_code_optimizations_completion_summary.md  claude_code_optimizations_summary.md  full-evolution-audit-report.md  full-evolution-gap-list.md  hermes_architecture_analysis.md  hermes_evolution_summary.md  hermes_learning_summary.md  hermes_uninstall_summary.md  installation_research_guide.md  integration_quick_guide.md  iteration_90_summary.md  iteration_91_summary.md  phase1_refactor_summary.md  phase2_upgrade_summary.md  phase4-hermes-style-session-reset-plan.md  phase4-memory-boundary.md  phase4-mempalace-session-boundary-fix.md  phase4-resume-delete-plan.md  phase4-resume-sessions-plan.md  phase4-session-numbered-resume-plan.md  phase4-session-time-display-plan.md  phase4-step1-memory-boundary-implementation-plan.md  phase6-multi-agent-audit.md  (+9 more)
(+212 files in other folders)
