[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxbot"
version = "0.1.0"
description = "MaxBot — 自我学习、自我构建的超级智能体"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
maxbot = "maxbot.cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
